--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
             <div class="col-md-3 p-0 pt-2">
               <div class="row">
-                phone numbers
+                <!-- phone numbers -->
                 <i class="bi bi-telephone col-1"></i>
                 <a class="col-11 phone" href="tel:+4733378901"
                   >+47 333 78 901</a
